@@ -14,6 +14,9 @@ apport (0.104) UNRELEASED; urgency=low
     get locale information. (LP: #198514)
   * apport/fileutils.py, mark_report_seen(): Do not crash if the file does not
     exist any more, because it was removed underneath us. (LP: #199932)
+  * apport/ui.py, test_collect_info_exepath(): Add a tuple argument and a
+    CompressedValue to the test report. This reproduces LP #199349.
+  * apport/report.py, anonymize(): Only work on string values. (LP: #199349)
 
   [ Kees Cook ]
   * apport/report.py: fix module license checking logic (LP: #199927).
@@ -22,7 +25,7 @@ apport (0.104) UNRELEASED; urgency=low
     - test_module_license_evaluation: check modinfo reporting.
   * problem_report.py: Skip atime test case if file system is mounted noatime.
 
- -- Martin Pitt <martin.pitt@ubuntu.com>  Thu, 13 Mar 2008 12:08:32 +0100
+ -- Martin Pitt <martin.pitt@ubuntu.com>  Thu, 13 Mar 2008 13:42:51 +0100
 
 apport (0.103) hardy; urgency=low
 
